@@ -1,3 +1,7 @@
+Sat Aug 22 14:33:49 MET DST 1998  Jochen Friedrich <jochen@scram.de>
+
+	* commands.c, gE_files.c: replaced basename() by g_basename().
+
 Thu Aug 20 20:25:57 1998  Owen Taylor  <otaylor@redhat.com>
 
 	* Restored gtk_widget_grab_focus's, because they seem
